--- a/home.html
+++ b/home.html
@@ -302,14 +302,15 @@
             </ul>
         </nav>
     </header>
-    <div class="content">
+    <div class="content" id="home">
         <p class="small-text">Professional marketing solutions, including social media management and video editing.</p>
         <h2 class="welcome-text">Welcome to</h2>
         <h2 class="editkaro-text">EditKaro.in</h2>
         <p class="description-text">We specialize in creative editing solutions that enhance your brand's message.</p>
         <a href="#portfolio" class="our-work">Our Work</a>
-        
-        <div class="about-us">About Us</div>
+
+        <div>
+        <div class="about-us" id="about">About Us</div>
         <p class="about-description">
             At EditKaro.in, we are passionate about transforming your creative vision into reality. Founded by a team of dedicated professionals with expertise in video editing, digital marketing, and content creation, our mission is to empower brands by delivering high-quality, engaging content that resonates with their target audience.
  
@@ -328,7 +329,7 @@ Join us on this exciting journey to elevate your brand and make a lasting impact
         <a href="#get-started" class="our-work">Get Started</a>
 
         <!-- Our Services Section -->
-        <div class="services-box">
+        <div class="services-box" id="service">
             <div class="services-title">Our Services</div>
             <div class="service-item" onclick="toggleActive(this)">
                 <i class="fas fa-video service-icon"></i>
@@ -356,7 +357,7 @@ Join us on this exciting journey to elevate your brand and make a lasting impact
         <div class="portfolio-title">Our Portfolio</div>
 
         <!-- Category Buttons -->
-        <div class="category-buttons">
+        <div class="category-buttons" id="portoflio">
             <a href="#short-form-videos" class="category-button" onclick="playVideo('video_short_form.mp4')">Short-Form Videos</a>
             <a href="#long-form-videos" class="category-button" onclick="playVideo('video_long_form.mp4')">Long-Form Videos</a>
             <a href="#gaming-videos" class="category-button" onclick="playVideo('video_gaming.mp4')">Gaming Videos</a>
@@ -417,7 +418,7 @@ Join us on this exciting journey to elevate your brand and make a lasting impact
         </div>
 
         <!-- Contact Us Section -->
-        <div class="contact-us">Contact Us</div>
+        <div class="contact-us" id="contact">Contact Us</div>
         <p class="contact-description">Have any questions or want to get started? Reach out to us today!</p>
         <div class="contact-rectangles">
             <div class="contact-rectangle">
