--- a/home.html
+++ b/home.html
@@ -329,7 +329,7 @@ Join us on this exciting journey to elevate your brand and make a lasting impact
         <a href="#get-started" class="our-work">Get Started</a>
 
         <!-- Our Services Section -->
-        <div class="services-box" id="service">
+        <div class="services-box" id="services">
             <div class="services-title">Our Services</div>
             <div class="service-item" onclick="toggleActive(this)">
                 <i class="fas fa-video service-icon"></i>
