--- a/home.html
+++ b/home.html
@@ -354,7 +354,7 @@ Join us on this exciting journey to elevate your brand and make a lasting impact
         </div> <!-- End of Services Box -->
 
         <!-- Our Portfolio Section -->
-        <div class="portfolio-title">Our Portfolio</div>
+        <div class="portfolio-title" id="portofilo">Our Portfolio</div>
 
         <!-- Category Buttons -->
         <div class="category-buttons" id="portoflio">
