--- a/home.html
+++ b/home.html
@@ -354,10 +354,10 @@ Join us on this exciting journey to elevate your brand and make a lasting impact
         </div> <!-- End of Services Box -->
 
         <!-- Our Portfolio Section -->
-        <div class="portfolio-title" id="portofilo">Our Portfolio</div>
+        <div class="portfolio-title" id="Portfolio">Our Portfolio</div>
 
         <!-- Category Buttons -->
-        <div class="category-buttons" id="portoflio">
+        <div class="category-buttons">
             <a href="#short-form-videos" class="category-button" onclick="playVideo('video_short_form.mp4')">Short-Form Videos</a>
             <a href="#long-form-videos" class="category-button" onclick="playVideo('video_long_form.mp4')">Long-Form Videos</a>
             <a href="#gaming-videos" class="category-button" onclick="playVideo('video_gaming.mp4')">Gaming Videos</a>
