--- a/home.html
+++ b/home.html
@@ -326,7 +326,7 @@ Join us on this exciting journey to elevate your brand and make a lasting impact
 
 
         </p>
-        <a href="#get-started" class="our-work">Get Started</a>
+        <a href="#contact" class="our-work">Get Started</a>
 
         <!-- Our Services Section -->
         <div class="services-box" id="services">
@@ -354,7 +354,7 @@ Join us on this exciting journey to elevate your brand and make a lasting impact
         </div> <!-- End of Services Box -->
 
         <!-- Our Portfolio Section -->
-        <div class="portfolio-title" id="Portfolio">Our Portfolio</div>
+        <div class="portfolio-title" id="portfolio">Our Portfolio</div>
 
         <!-- Category Buttons -->
         <div class="category-buttons">
