--- a/home.html
+++ b/home.html
@@ -214,8 +214,7 @@
         footer {
             text-align: center;
             padding: 10px;
-            background: #424242;
-            color: #fff;
+            color: black;
             position: relative;
             bottom: 0;
             width: 100%;
