--- a/home.html
+++ b/home.html
@@ -24,6 +24,9 @@
             height: 80px;
             margin-right: 40px;
         }
+         html {
+    scroll-behavior: smooth;
+}
         nav ul {
             list-style: none;
             padding: 1;
@@ -499,5 +502,5 @@ Join us on this exciting journey to elevate your brand and make a lasting impact
         console.log('Welcome to Edit Karo!');
     </script>
 </body>
-</html>
+</html> 
 
